[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "client-server-stream"
version = "0.1.0"
description = "Channel-based concurrent streaming client-server service"
authors = [
    { name = "Yashasvi Bhatter" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "websockets",
]


[tool.setuptools.packages.find]
where = ["."]
